First version tutorial

--- a/app/views/csfs/new.html.erb
+++ b/app/views/csfs/new.html.erb
@@ -5,19 +5,10 @@
     <div class="collapsible-content">
       <div class="content-inner">
         <div class="content-text p-b-10">
-          Visão os princípios éticos que norteiam uma pessoa.
-          <br/>
-          <br/>
-          Exemplo de Visão:
-          <br/>
-          <br/>
-          <strong>Que características me tornam único? </strong>
-          <br/>
-          <strong>Quais minhas melhores competências? </strong>
-          <br/>
-          <strong>Quais delas são essenciais para meus objetivos? </strong>
-          <br/>
-          <strong>Quais fatores impactam no meu bem estar? </strong>
+          Fatores Críticos de Sucesso são pontos chave para atingir objetivos.
+          Que fatores na minha vida pessoal são decisivos para meu bem-estar e sucesso,
+          quais as competências mais importantes.
+
         </div>
       </div>
     </div>
