--- a/app/views/goals/_cardgoal.erb
+++ b/app/views/goals/_cardgoal.erb
@@ -28,7 +28,7 @@
                   </tbody>
                 </table>
                 <br/>
-                <%= submit_tag "Atualizar atividades", class:"btn btn-success" %>
+                <%= submit_tag "Atualizar progresso", class:"btn btn-success" %>
               <% end %>
             </div>
             <div class="goal-progress">
