--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="form-group">
-        <%= form.label :name %>
+        <%= form.label "Nome da meta" %>
         <%= form.text_field :name, autocomplete: "off",  class: "form-control" %>
       </div>
     </div>
