--- a/app/views/roles/_roles.html.erb
+++ b/app/views/roles/_roles.html.erb
@@ -9,8 +9,8 @@
         <h3 class="lead color-dark">
           <table>
             <tbody>
-              <td width="100px">Como <%= roles.name %></td>
-              <td width="300px" class="p-l-30"><%= roles.description %></td>
+            <td width="100px">Como <strong><%= roles.name %>,</strong></td>
+            <td width="300px" class="p-l-30">gostaria de no futuro <strong><%= roles.description %></strong></td>
             </tbody>
           </table>
         </h3>
