--- a/app/views/spheres/_form.html.erb
+++ b/app/views/spheres/_form.html.erb
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="form-group">
-        <%= form.label "Nome" %>
+        <%= form.label "Nome do âmbito" %>
         <%= form.text_field :name, autocomplete: "off",  class: "form-control" %>
       </div>
     </div>
