--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,5 +1,28 @@
 <div class="container">
+  <div class="wrap-collabsible p-t-60 p-b-20">
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none" checked>
+    <label for="collapsible" class="lbl-toggle">METAS</label>
+    <div class="collapsible-content">
+      <div class="content-inner">
+        <div class="content-text p-b-10">
+          Metas ajudam a dividir um objetivo em partes menores.
+          A partir de cada meta, a seguir você deve elaborar atividades
+          para a conclusão da mesma.
+          <br/>
+          <br/>
+          Exemplos de Metas para o Objetivo Estratégico Aprender uma nova lingua:
+          <br/>
+          <br/>
+          Escolher uma lingua para aprender<br/>
+          Fazer curso<br/>
+          Me tornar fluente<br/>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <h3>Nova Meta</h3>
+  <br/>
 
   <%= render 'form', goal: @goal %>
   <br/>
