--- a/app/views/objectives/editobjective.html.erb
+++ b/app/views/objectives/editobjective.html.erb
@@ -1,5 +1,30 @@
 <div class="container">
   <div class="col-xs-12  p-t-10">
+
+    <div class="wrap-collabsible p-t-60 p-b-20">
+      <input id="collapsible" class="toggle" type="checkbox" style="display: none">
+      <label for="collapsible" class="lbl-toggle">ATIVIDADES</label>
+      <div class="collapsible-content">
+        <div class="content-inner">
+          <div class="content-text p-b-10">
+            As atividades servem para acompanhar o progresso de uma meta.
+            Adicione atividades já realizadas ou não e atualize o progresso da meta.
+            <br/>
+            <br/>
+            Exemplos de Atividades para a meta Passar em Geografia esse bimestre:
+            <br/>
+            <br/>
+            Estudar capítulo 1<br/>
+            Estudar capítulo 2<br/>
+            Estudar capítulo 3<br/>
+            Fazer exercícios<br/>
+            Revisar<br/>
+            Fazer prova<br/>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="offer-without-hover offer-radius offer-info">
       <span class="shape"></span>
       <div class="offer-content">
