--- a/app/views/objectives/new.html.erb
+++ b/app/views/objectives/new.html.erb
@@ -1,5 +1,28 @@
 <div class="container">
-  <h1>Novo Objetivo Estratégico</h1>
+  <div class="wrap-collabsible p-t-60 p-b-20">
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none" checked>
+    <label for="collapsible" class="lbl-toggle">OBJETIVOS ESTRATÉGICOS</label>
+    <div class="collapsible-content">
+      <div class="content-inner">
+        <div class="content-text p-b-10">
+          Representa quais resultados pretende alcançar.
+          São objetivos a curto ou longo prazo dentro de cada âmbito de vida.
+          Metas e atividades devem ser criadas em Meu Planejemento para cada objetivo.
+          <br/>
+          <br/>
+          Exemplos de Objetivos Estratégicos:
+          <br/>
+          <br/>
+          Unir minha família<br/>
+          Conseguir um emprego<br/>
+          Ganhar um milhão<br/>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <h3>Novo Objetivo Estratégico</h3>
+  <br/>
 
   <%= render partial: 'form', locals: {action_text: "Criar"}, objective: @objective %>
   <br/>
