--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,6 +1,31 @@
 <div class="container">
+  <div class="wrap-collabsible p-t-60 p-b-20">
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none" checked>
+    <label for="collapsible" class="lbl-toggle">PAPÉIS</label>
+    <div class="collapsible-content">
+      <div class="content-inner">
+        <div class="content-text p-b-10">
+
+          Os papéis são as formas de interação que uma pessoa exerce no cotidiano.
+          Escreva no espaço a baixo seus papéis e como você gostaria de se ver no futuro nesse aspecto.
+          <br/>
+          <br/>
+          Exemplo de papéis:
+          <br/>
+          <br/>
+          Como <strong>Irmã </strong>gostaria de no futuro <strong>brincar mais com minhas irmãs</strong>
+          <br/>
+          Como <strong>Pai </strong>gostaria de no futuro <strong>ter mais tempo com meus filhos</strong>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <h3>Meus Papéis</h3>
   <br/>
+
+  <p>Como __________, gostaria de no futuro ______________</p>
+
   <%= render partial: "roles/roles", collection: @current_plan.roles %>
   <%= render "form", value: @role %>
   <br/>
