--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -1,7 +1,7 @@
 <div class="container p-t-40">
   <% if current_user.selected_plan %>
     <div class="p-b-10" align="right">
-      <%= link_to " Gerar PDF", plans_pdf_path(id: @current_plan, format: :pdf), data: { disable_with: " Gerando arquivo..." }, class: "btn btn-success lnr lnr-file-add" %>
+      <%= link_to " Gerar PDF", plans_pdf_path(id: @current_plan, format: :pdf), data: {disable_with: " Gerando arquivo..."}, class: "btn btn-success lnr lnr-file-add" %>
       <%= link_to " Gerenciar Planos", plans_path, method: "get", class: "btn btn-primary lnr lnr-cog" %>
     </div>
     <div class="row">
@@ -9,19 +9,24 @@
         <div class="card-body">
           <h5 class="p-b-20 text-align-center">
             <div class="col-md-12 p-t-20 p-b-20">
-              <h3 class="color-ltr-myplan"><span>Planejamento Estratégico Pessoal de <%= current_user.name %></span></h3>
+              <h3 class="color-ltr-myplan"><span>Planejamento Estratégico Pessoal de <%= current_user.name %></span>
+              </h3>
             </div>
             Data: <%= @current_plan.created_at.strftime("%d/%m/%Y") %> <br/><br/>
             Nome do Plano: <%= "#{@current_plan.name}" %>
           </h5>
           <div class="padding-all">
-            <h3>Matriz SWOT <%= link_to "", plans_swotedit_path, method: "get", class: "btn btn-success lnr lnr-pencil align-right" %></h3>
+
+            <!-- SWOT Matrix -->
+            <h3>Matriz
+              SWOT <%= link_to "", plans_swotedit_path, method: "get", class: "btn btn-success lnr lnr-pencil align-right" %></h3>
             <br/>
             <p class="card-text"><%= render template: "plans/swot" %></p>
             <hr/>
 
             <div class="row">
               <div class="padding-all">
+                <!-- Mission -->
                 <% if @my_mission %>
                   <%= link_to missions_path do %>
                     <div class="col-xs-4  p-t-10">
@@ -47,7 +52,7 @@
                     </div>
                   <% end %>
                 <% else %>
-                  <%= link_to new_mission_path do %>
+                  <%= link_to missions_path do %>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
@@ -60,6 +65,7 @@
                   <% end %>
                 <% end %>
 
+                <!-- Vision -->
                 <% if @my_vision %>
                   <%= link_to visions_path do %>
                     <div class="col-xs-7  p-t-10">
@@ -85,7 +91,7 @@
                     </div>
                   <% end %>
                 <% else %>
-                  <%= link_to new_vision_path do %>
+                  <%= link_to visions_path do %>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
@@ -97,11 +103,45 @@
                     </div>
                   <% end %>
                 <% end %>
-
               </div>
             </div>
             <hr/>
 
+            <!-- Values -->
+            <div class="row">
+              <div class="padding-all">
+                <h3>Meus Valores</h3>
+                <div class="row">
+                  <%= render partial: "values/values", collection: @current_plan.values %>
+                </div>
+                <div class="row p-l-20">
+                  <%= render partial: "values/form" %>
+                </div>
+              </div>
+            </div>
+            <hr/>
+
+            <!-- Roles -->
+            <div class="row">
+              <div class="padding-all">
+                <h3>Meus Papéis</h3>
+                <div class="row p-t-20">
+                  <table>
+                    <tbody>
+                    <td width="100px" class="p-l-30">Papel chave</td>
+                    <td width="300px" class="p-l-60">Como me vejo no futuro</td>
+                    </tbody>
+                  </table>
+                  <%= render partial: "roles/roles", collection: @current_plan.roles %>
+                </div>
+                <div class="row">
+                  <%= render partial: "roles/form" %>
+                </div>
+              </div>
+            </div>
+            <hr/>
+
+            <!-- Critical Success Factors -->
             <div class="row">
               <div class="padding-all">
                 <% if @my_csf %>
@@ -131,7 +171,7 @@
                     </div>
                   <% end %>
                 <% else %>
-                  <%= link_to new_csf_path do %>
+                  <%= link_to csfs_path do %>
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-t-10">
                       <div class="dashed dashed-border">
                         <div class="dashed-content ">
@@ -147,39 +187,7 @@
             </div>
             <hr/>
 
-            <div class="row">
-              <div class="padding-all">
-                <h3>Meus Valores</h3>
-
-                <div class="row">
-                <%= render partial: "values/values", collection: @current_plan.values %>
-                </div>
-                <div class="row p-l-20">
-                <%= render partial: "values/form" %>
-                </div>
-              </div>
-            </div>
-            <hr/>
-
-            <div class="row">
-              <div class="padding-all">
-                <h3>Meus Papéis</h3>
-                <div class="row p-t-20">
-                  <table>
-                    <tbody>
-                    <td width="100px" class="p-l-30">Papel chave</td>
-                    <td width="300px" class="p-l-60">Como me vejo no futuro</td>
-                    </tbody>
-                  </table>
-                  <%= render partial: "roles/roles", collection: @current_plan.roles %>
-                </div>
-                <div class="row">
-                  <%= render partial: "roles/form" %>
-                </div>
-              </div>
-            </div>
-            <hr/>
-
+            <!-- Spheres -->
             <h3>Âmbitos</h3>
             <% if !current_user.spheres.nil? %>
               <div class="row">
@@ -202,12 +210,12 @@
             <% end %>
             <hr/>
 
+            <!-- Strategic Objectives -->
             <h3>Objetivos Estratégicos</h3>
             <% if !@current_plan.objectives.nil? %>
               <div class="row">
                 <%= render template: "objectives/index" %>
               </div>
-
               <div class="row">
                 <%= link_to new_objective_path do %>
                   <div class="col-xs-12 p-t-10">
