--- a/app/views/values/_values.html.erb
+++ b/app/views/values/_values.html.erb
@@ -6,11 +6,11 @@
         </div>
       </div>
       <div class="offer-content">
-        <h3 class="lead color-dark">
+        <h3 class="lead color-dark m-b-0">
           <%= values.name %>
         </h3>
       </div>
-      <p class="p-l-15 p-b-5"><%= values.created_at.strftime("%d/%m/%Y") %></p>
+      <p class="p-l-15 p-b-5 p-r-5 align-right"><%= values.created_at.strftime("%d/%m/%Y") %></p>
     </div>
   <% end %>
 </div>
