--- a/app/views/roles/_roles.html.erb
+++ b/app/views/roles/_roles.html.erb
@@ -9,12 +9,13 @@
         <h3 class="lead color-dark">
           <table>
             <tbody>
-            <td width="100px">Como <strong><%= roles.name %>,</strong></td>
-            <td width="300px" class="p-l-30">gostaria de no futuro <strong><%= roles.description %></strong></td>
+            <td width="200px">Como <strong><%= roles.name %>,</strong></td>
+            <td width="100%" class="p-l-30">gostaria de no futuro <strong><%= roles.description %></strong></td>
             </tbody>
           </table>
         </h3>
       </div>
+      <p class="p-l-15 p-b-5 p-r-5 align-right"><%= roles.created_at.strftime("%d/%m/%Y") %></p>
     </div>
   <% end %>
 </div>
