--- a/app/assets/stylesheets/card_offer.scss
+++ b/app/assets/stylesheets/card_offer.scss
@@ -58,9 +58,9 @@
 .offer-info .shape{
   border-color: transparent #5bc0de transparent transparent;
 }
-.offer-warning {	border-color: #f0ad4e; }
+.offer-warning {	border-color: #FFCE4C; }
 .offer-warning .shape{
-  border-color: transparent #f0ad4e transparent transparent;
+  border-color: transparent #FFCE4C transparent transparent;
 }
 .offer-orange {	border-color: #f0a306; }
 .offer-orange .shape{
