--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <div class="wrap-input100 validate-input m-b-16" data-validate="Name is required">
-          <%= form.text_field :name, autocomplete: "off", placeholder: "Nome", class: "input100" %>
+          <%= form.text_field :name, autocomplete: "off", placeholder: "Nome Completo", class: "input100" %>
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<span class="lnr lnr-user"></span>
