Css html improvement to home, myplan and pdf

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,11 @@
   line-height: 30px;
 }
 
+.border-ltr {
+  border: 1px solid rgba(40, 167, 233, 0.31);
+  padding: 1px;
+}
+
 .color-ltr-myplan span{
   color: #28a7e9;
   font-weight: bold;
