--- a/app/assets/stylesheets/theme/templatemo-style.scss
+++ b/app/assets/stylesheets/theme/templatemo-style.scss
@@ -378,7 +378,7 @@ header .social-icon li a {
 
 .portfolio-thumb,
 .portfolio-overlay {
-  max-width: 450px;
+  max-width: 100%;
 }
 
 #portfolio .portfolio-thumb {
