--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -47,11 +47,30 @@
         <div class="container-login100-form-btn p-t-25">
           <%= form.submit "Cadastrar", class: "login100-form-btn" %>
         </div>
-        <span class="txt1">
-          Ao se cadastrar, você concorda com nossos termos de uso e política de privacidade.
-        </span>
 
       <% end %>
+      <span class="txt1">
+        Ao se cadastrar, você concorda com nossos <button type="button" class="" data-toggle="modal" data-target="#myModal">Termos de Uso</button> e <button type="button" class="" data-toggle="modal" data-target="#myModal">Política de Privacidade</button>.
+      </span>
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document"  style="z-index: 10000;">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal"aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h4 class="modal-title" id="myModalLabel">Termos de Uso</h4>
+            </div>
+            <div class="modal-body">
+              <div class="col-xs-12">
+                <%= render 'terms' %>
+              </div>
+            </div>
+            <div class="modal-footer">
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="text-center w-full p-t-115">
 						<span class="txt1">
