Link Home page começar to new plan

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
           <div class="sub-element">Alcance objetivos</div>
         </div>
         <!-- a data-scroll href="#about" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">COMEÇAR</a -->
-        <%= link_to "COMEÇAR", plans_path, class: "btn btn-default wow fadeInUp", method: "get" %>
+        <%= link_to "COMEÇAR", new_plan_path, class: "btn btn-default wow fadeInUp", method: "get" %>
       </div>
     </div>
   </div>
