Missing image at login fixed

--- a/app/assets/stylesheets/login/mainlogin.scss
+++ b/app/assets/stylesheets/login/mainlogin.scss
@@ -188,7 +188,7 @@ iframe {
   height: 100%;
   top: 0;
   left: 0;
-  background-image: url('/assets/img-01.png');
+  background-image: image-url('img-01.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
