--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <% if current_user.admin? %>
+        <% if current_user&.admin? %>
           <li><%= link_to " ", contacts_path, method: "get", class: "lnr lnr-envelope" %></li>
           <li><%= link_to " ", users_path, method: "get", class: "lnr lnr-users" %></li>
       <% end %>
