--- a/app/assets/stylesheets/login/mainlogin.scss
+++ b/app/assets/stylesheets/login/mainlogin.scss
@@ -367,6 +367,15 @@ iframe {
   color: #0250c5;
 }
 
+.label-input {
+  font-family: Raleway-Regular;
+  font-size: 14px;
+  color: #999999;
+  line-height: 1.2;
+  display: block;
+  position: relative;
+  padding-top: 0;
+}
 
 /*------------------------------------------------------------------
 [ Button ]*/
